--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
 
     <section class="shop">
-        <img src="imaged/shop.png" alt="烘培工坊大安店">
+        <img src="imaged/p1.png" alt="烘培工坊台中店">
         <div class="info">
         <h2>8月1日台中旗艦店隆重開張</h2>
         <p>享受花園庭院的悠閒時光，內用座位區美食相伴，<br>
